[package]
name = "injector-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
sha2 = "0.11.0"
anyhow = "1.0"

ntapi = "0.4.3"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading", 
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp"
] }

pelite = "0.10.0"
winapi = "0.3.9"
clap = { version = "4.6.0", features = ["derive"] }
